web/book/tests/snapshots/snapshot__tests__prql__language-features__standard-library__README-0.prql.snap
---
source: book/tests/snapshot.rs
expression: "from employees\nderive [\n  gross_salary = (salary + payroll_tax | as int),\n  gross_salary_rounded = (gross_salary | round 0),\n  time = s\"NOW()\",  # an s-string, given no `now` function exists in PRQL\n]\n"
---
SELECT
  *,
  CAST(salary + payroll_tax AS int) AS gross_salary,
  ROUND(CAST(salary + payroll_tax AS int), 0) AS gross_salary_rounded,
  NOW() AS time
FROM
  employees

